--- a/a.css
+++ b/a.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Starborn';
-    src: url('https://github.com/PlasticSpatula/PlasticSpatula.github.io/blob/main/Starborn.ttf');
+    src: url('https://raw.githubusercontent.com/PlasticSpatula/PlasticSpatula.github.io/blob/main/Starborn.ttf');
     font-weight: 100;
     font-style: normal;
 } 
